--- a/webd/site/siteD/css/style.css
+++ b/webd/site/siteD/css/style.css
@@ -2,14 +2,14 @@
 
 /* reset */
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     color: #333;
 }
 
 a {
-    text-decoration: none;
     color: #333;
+    text-decoration: none;
 }
 
 li {
@@ -21,151 +21,135 @@ img {
     vertical-align: top;
 }
 
-/* wrap */
 #wrap {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    position: relative;
 }
 
-/* #aside */
-#aside {
+/* header */
+#header {
     width: 200px;
     height: 650px;
 }
 
-#aside .logo {
+#header .logo {
     width: 100%;
     height: 100px;
-    /* 글씨가 가운데 오게 하기 위해서 백그라운드컬러색 제거 */
     display: flex;
     align-items: center;
     justify-content: center;
-    /* display: flex;
-    align-items: center;
-    justify-content: center; : 가운데정렬 */
 }
 
-#aside .logo a {
+#header .logo a {
     display: block;
     font-size: 26px;
-    margin-top: 5px;
 }
 
 /* nav */
-#aside .nav {
-    width: 200px;
+#header .nav {
+    width: 100%;
     height: 550px;
-    background-color: #e3e3e3;
 }
 
-#aside .nav>ul {
+#header .nav>ul {
     margin: 5px;
 }
 
-#aside .nav>ul>li {
+#header .nav>ul>li {
     margin-bottom: 5px;
 }
 
-#aside .nav>ul>li>a {
+#header .nav>ul>li>a {
     display: inline-block;
     padding: 10px;
     background-color: #ffd139;
     width: 100%;
-    text-align: center;
+    text-align: left;
     box-sizing: border-box;
     border: 2px solid #dead0c;
 }
 
-#aside .nav>ul>li>a:hover {
-    text-decoration: underline;
-}
-
-#aside .nav>ul>li>ul {
+#header .nav>ul>li>ul {
     display: none;
 }
 
-#aside .nav>ul>li>ul>li>a {
-    display: block;
+#header .nav>ul>li>ul>li>a {
+    display: inline-block;
     padding: 10px;
-    background-color: #ffedad;
-    text-align: center;
+    background-color: #ffebab;
+    width: 100%;
+    text-align: left;
+    box-sizing: border-box;
     border-bottom: 2px solid #dead0c;
 }
 
-#aside .nav>ul>li>ul>li>a:hover {
-    background-color: #ffe281;
+#header .nav>ul>li>ul>li>a:hover {
+    text-decoration: underline;
 }
 
 /* main */
 #main {
     width: calc(100% - 200px);
+    height: 650px;
 }
 
 /* slider */
 #slider {
     width: 100%;
+    height: 400px;
     display: flex;
     overflow: hidden;
 }
 
-#slider .imageWrap {
+#slider .sliderWrap {
     width: calc(100% - 230px);
-    height: 400px;
 }
 
-#slider .imageWrap .image {
+#slider .sliderWrap .slider {
     background-size: cover;
     background-position: center;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: end;
-    justify-content: flex-end;
-
 }
 
-#slider .imageWrap .image.i1 {
+#slider .sliderWrap .slider.s1 {
     background-image: url(../images/slider01.jpg);
 }
 
-#slider .imageWrap .image.i2 {
+#slider .sliderWrap .slider.s2 {
     background-image: url(../images/slider02.jpg);
 }
 
-#slider .imageWrap .image.i3 {
+#slider .sliderWrap .slider.s3 {
     background-image: url(../images/slider03.jpg);
 }
 
-#slider .imageWrap .image .text {
+#slider .sliderWrap .slider .text {
     background-color: #dead0c8f;
     width: 100%;
     padding: 20px;
+    box-sizing: border-box;
 }
 
-#slider .imageWrap .image .text h2 {
+#slider .sliderWrap .slider .text h2 {
     color: #fff;
     margin-bottom: 5px;
     font-size: 30px;
 }
 
-#slider .imageWrap .image .text p {
+#slider .sliderWrap .slider .text p {
     color: #fff;
     font-size: 16px;
 }
 
-#slider .image {
-    width: calc(100% - 230px);
-    height: 400px;
-    background-color: #d9d9d9;
-}
-
-/* banner */
+/* slider :banner  */
 #slider .banner {
     width: 230px;
     height: 400px;
-    background-image: url(../images/benner.jpg);
+    background: url(../images/benner.jpg) no-repeat center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -176,7 +160,7 @@ img {
 }
 
 #slider .banner:hover {
-    border: 5px solid#ffd139;
+    border: 5px solid #ffd139;
 }
 
 #slider .banner h3 {
@@ -194,7 +178,7 @@ img {
 #slider .banner a {
     background-color: #fff;
     padding: 10px 20px;
-    border-radius: 50px;
+    border-radius: 40px;
 }
 
 /* contents */
@@ -203,7 +187,7 @@ img {
     display: flex;
 }
 
-/* contents : notice */
+/* contents :notice */
 #contents .notice {
     width: 50%;
     height: 250px;
@@ -220,17 +204,18 @@ img {
 
 #contents .notice li {
     display: flex;
-    line-height: 1.7;
+    line-height: 1.5;
     position: relative;
-    padding-left: 16px;
+    padding-left: 10px;
 }
 
 #contents .notice li::before {
     content: '';
     width: 6px;
     height: 6px;
-    background-color: #a58109;
+    background-color: #333;
     border-radius: 50%;
+    /*bdrs*/
     position: absolute;
     left: 0;
     top: 8px;
@@ -255,14 +240,14 @@ img {
 #contents .notice .more {
     position: absolute;
     right: 30px;
-    top: 30px;
+    top: 40px;
 }
 
 #contents .notice .more:hover {
     text-decoration: underline;
 }
 
-/* gallery */
+/* contents :gallery */
 #contents .gallery {
     width: 50%;
     height: 250px;
@@ -281,7 +266,7 @@ img {
 
 #contents .gallery li {
     width: 120px;
-    margin-right: 10px;
+    margin-left: 10px;
 }
 
 #contents .gallery li a {
@@ -289,8 +274,8 @@ img {
 }
 
 #contents .gallery li a span {
+    position: 10px 0;
     display: inline-block;
-    padding: 10px 0;
 }
 
 #contents .gallery li a span:hover {
@@ -308,12 +293,12 @@ img {
 
 #footer .footer1 {
     width: 200px;
-}
-
-#footer .footer1 h4 {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#footer .footer1 h4 {
     font-size: 20px;
     color: #858585;
 }
@@ -332,8 +317,8 @@ img {
     height: 30px;
 }
 
-/* popup_view */
-.popup_view {
+/* popup */
+.popup-view {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -346,14 +331,14 @@ img {
     display: none;
 }
 
-.popup_view h3 {
+.popup-view h3 {
     font-size: 24px;
     margin-bottom: 15px;
     border-bottom: 2px solid #333;
     padding-bottom: 5px;
 }
 
-.popup_close {
+.popup-close {
     background-color: #ffc400;
     padding: 8px 20px;
     display: inline-block;
@@ -362,6 +347,4 @@ img {
     left: 50%;
     transform: translateX(-50%);
     bottom: 20px;
-
-
 }
