--- a/webd/site/siteE/css/style.css
+++ b/webd/site/siteE/css/style.css
@@ -173,9 +173,10 @@ img {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    /*  overflow: hidden;
+    /* 한줄효과:
+    overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap; : 한줄효과 */
+    white-space: nowrap;  */
 }
 
 #contents .notice li a:hover {
@@ -308,28 +309,35 @@ img {
 
 #slider .sliderWrap {
     width: 400%;
+    /* 이미지가 4장이니까 300 -> 400으로 변경 */
     height: 100%;
     display: flex;
+    /* 이미지 가로로 들어갈꺼라 플렉스처리 */
 }
 
 #slider .sliderWrap .slider {
     width: 100%;
     height: 100%;
+    /* 이미지가 잘 들어가는지 확인 */
     background-size: cover;
     background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    /* 텍스트들어가있는 박스 가운데로 오게 해주기 위해
+    display: flex;
+    align-items: center;
+    justify-content: center; */
 }
 
 #slider .sliderWrap .slider .text {
     background-color: #771a1aae;
     width: 300px;
     height: 300px;
+    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: center;
     flex-direction: column;
     border-radius: 50%;
 }
