--- a/Web/Responsive/css/style.css
+++ b/Web/Responsive/css/style.css
@@ -1,16 +1,58 @@
 /* layout */
-#header {
+body {
     background: url(../img/header_bg.jpg) repeat-x center top;
+}
+
+#header {}
+
+#nav {
+    overflow: hidden;
+    padding: 25px 0;
+    display: none;
+}
+
+#title {
+    background-color: #eaf7fd;
+}
+
+#contents .container {
+    border-right: 1px solid #dbdbdb;
+    border-left: 1px solid #dbdbdb;
+}
+
+#cont_left {
+    float: left;
+    width: 250px;
+}
+
+#cont_center {
+    overflow: hidden;
+    min-height: 1300px;
+    margin-right: 250px;
+    border-right: 1px solid #dbdbdb;
+    border-left: 1px solid #dbdbdb;
+}
+
+#cont_right {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 250px;
+}
+
+#footer {
+    border-top: 1px solid #dbdbdb;
 }
 
 /* container */
 .container {
+    position: relative;
     width: 1200px;
     margin: 0 auto;
-    background: rgba(0, 0, 0, 0.3);
+    /* background: rgba(0, 0, 0, 0.1); */
 }
 
-/* header */
+/* header_menu */
 .header {
     height: 327px;
 }
@@ -21,7 +63,6 @@
 
 .header .header_menu a {
     color: #fff;
-    font-family: 'Abel';
     padding: 8px 0 6px 10px;
     display: inline-block;
     transition: color 0.3s ease;
@@ -31,11 +72,11 @@
     color: #ccc;
 }
 
+/* header_tit */
 .header .header_tit {
     text-align: center;
     text-transform: uppercase;
     margin-top: 55px;
-    font-family: 'Abel', 'sans-serif';
 }
 
 .header .header_tit h1 {
@@ -68,6 +109,7 @@
     /* 0 0 0 x축 y축 블러 */
 }
 
+/* header_icon */
 .header .header_icon {
     text-align: center;
     margin-top: 40px;
@@ -107,7 +149,7 @@
     transition: all 0.3s ease;
 }
 
-.header .header_icon li a span::before {
+.header .header_icon li a span:before {
     content: '';
     position: absolute;
     left: 50%;
@@ -124,10 +166,268 @@
 }
 
 .header .header_icon li a:hover {
-    box-shadow: 0 0 0 3px rgba(75, 154, 191, 0.9) inset, 0 0 0 100px rgba(0, 0, 0, 0.1) inset;
+    box-shadow: 0 0 0 3px rgba(75, 154, 191, 0.9) inset,
+        0 0 0 100px rgba(0, 0, 0, 0.1) inset;
+}
+
+/* nav menu */
+.nav {
+    overflow: hidden;
+}
+
+.nav>div {
+    float: left;
+    width: 40%;
+}
+
+.nav>div:last-child {
+    width: 20%;
+}
+
+.nav>div ol {
+    overflow: hidden;
+}
+
+.nav>div h3 {
+    font-size: 18px;
+    color: #25a2d0;
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.nav>div li {
+    float: left;
+    width: 50%;
+    position: relative;
+    padding-left: 8px;
+    box-sizing: border-box;
+}
+
+.nav>div:last-child li {
+    width: 100%;
+}
+
+.nav>div li:before {
+    content: '';
+    width: 3px;
+    height: 3px;
+    background-color: #333;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: 8px;
+}
+
+.nav>div li a {
+    position: relative;
+}
+
+.nav>div li a:after {
+    content: '';
+    display: inline-block;
+    width: 0;
+    height: 1px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: #25a2d0;
+    transition: all .2s ease-out;
+}
+
+.nav>div li:hover a:after {
+    width: 100%;
+}
+
+/* title */
+.title {
+    position: relative;
+    text-align: center;
+}
+
+.title h2 {
+    font-family: 'Nanum Brush Script';
+    font-size: 39px;
+    color: #0093bd;
+    padding: 5px 0;
+}
+
+.title .btn {
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    background: #3192bf;
+    color: #fff;
+    font-size: 35px;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+.title .btn:hover {
+    box-shadow: 0 0 0 3px rgba(71, 154, 191, 0.9) inset, 0 0 0 100px rgba(0, 0, 0, 0.1) inset;
+}
+
+/* contents 영역 */
+.column {
+    padding: 15px;
+    border-bottom: 1px solid #dbdbdb;
+}
+
+.column .col_tit {
+    font-size: 20px;
+    color: #2f7fa6;
+    padding-bottom: 5px;
+}
+
+.column .col_desc {
+    border-bottom: 1px dashed #dbdbdb;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    line-height: 18px;
+    color: #787878;
+
+}
+
+.column.col1 {}
+
+.column.col2 {}
+
+.column.col3 {
+    border-bottom: 0;
+}
+
+.column.col4 {}
+
+.column.col5 {}
+
+.column.col6 {
+    border-bottom: 0;
+}
+
+.column.col7 {}
+
+.column.col8 {}
+
+.column.col9 {
+    border-bottom: 0;
+}
+
+/* menu */
+.menu {}
+
+.menu li {
+    position: relative;
+}
+
+.menu li a {
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #878787;
+    border-bottom: 1px solid #dbdbdb;
+    padding: 10px;
+    display: block;
+    transition: box-shadow 0.34s ease, background 0.34s ease;
+}
+
+.menu li a:hover {
+    box-shadow: inset 180px 0 0 0 rgba(36, 130, 174, 0.7);
+    color: #fff;
+    background: rgba(36, 130, 174, 0.9);
+}
+
+.menu li a i {
+    position: absolute;
+    right: 10px;
+    top: 15px;
+}
+
+/* notice1 */
+.notice1 {
+    position: relative;
+}
+
+.notice1 h5 {
+    font-size: 14px;
+    color: #2f7fa6;
+    padding-bottom: 5px;
+}
+
+.notice1 li {
+    position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding-left: 8px;
+}
+
+.notice1 li:before {
+    content: '';
+    width: 3px;
+    height: 3px;
+    border-radius: 50%;
+    background: #333;
+    position: absolute;
+    left: 0;
+    top: 8px;
+}
+
+.notice1 .more {
+    position: absolute;
+    right: 0;
+    top: 7px;
+    color: #878787;
+    text-transform: uppercase;
+    font-size: 10px;
+}
+
+/* notice2 */
+.notice2 {
+    position: relative;
+}
+
+.notice2 h5 {
+    font-size: 14px;
+    color: #2f7fa6;
+    padding-bottom: 5px;
+}
+
+.notice2 li {
+    position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    padding-left: 8px;
+    padding-bottom: 3px;
+    max-height: 40px;
+    /*   max-height: 40px; : ie*/
+}
+
+.notice2 li:before {
+    content: '';
+    width: 3px;
+    height: 3px;
+    background: #333;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: 7px;
+}
+
+.notice2 .more {
+    position: absolute;
+    right: 0;
+    top: 7px;
+    color: #878787;
+    text-transform: uppercase;
+    font-size: 10px;
 }
 
 /* mediaquery */
+/* 화면 너비 0~1220px */
 @media (max-width: 1220px) {
     .container {
         width: 100%;
@@ -135,5 +435,156 @@
 
     .row {
         padding: 0 15px;
+    }
+
+    #contents .container {
+        border: 0;
+    }
+
+    .title .btn {
+        right: 5px;
+    }
+}
+
+/* 화면 너비 0~1024px */
+@media (max-width: 1024px) {}
+
+/* 화면 너비 0~960px */
+@media (max-width: 960px) {
+    #cont_right {
+        position: static;
+        width: 100%;
+        border-top: 1px solid #dbdbdb;
+    }
+
+    #cont_center {
+        margin-right: 0;
+        border-right: 0;
+
+    }
+
+    .nav>div {
+        float: none;
+        width: 100%;
+    }
+
+    .nav>div:last-child {
+        width: 100%;
+    }
+
+    .nav>div li {
+        width: 33.3333%;
+    }
+
+    .nav>div:last-child li {
+        width: 33.3333%;
+    }
+
+    .nav>div ol {
+        margin-bottom: 10px;
+    }
+}
+
+/* 화면 너비 0~768px */
+@media (max-width: 768px) {
+    #cont_left {
+        float: none;
+        width: 100%;
+    }
+
+    #cont_center {
+        border-left: 0;
+    }
+}
+
+/* 화면 너비 0~600px */
+@media (max-width: 600px) {
+    .header {
+        height: auto;
+    }
+
+    .header .header_tit {
+        display: none;
+    }
+
+    .header .header_icon {
+        display: none;
+    }
+
+    .title .btn {
+        display: none;
+    }
+
+    .nav>div li {
+        width: 50%;
+    }
+
+    .nav>div:last-child li {
+        width: 50%;
+    }
+
+    .column.col1 .col_tit {
+        display: none;
+    }
+
+    .column.col1 .col_desc {
+        display: none;
+    }
+
+    .column.col1 {
+        padding: 0;
+        border-bottom: 0;
+    }
+
+    .column.col1 .menu ul {
+        overflow: hidden;
+    }
+
+    .column.col1 .menu li {
+        float: left;
+        width: 33.3333%;
+        border-right: 1px solid #dbdbdb;
+        box-sizing: border-box;
+        text-align: center;
+    }
+
+    .column.col1 .menu li:nth-child(3n) {
+        border-right: 0;
+    }
+
+    .column.col1 .menu li a {
+        color: #fff;
+        text-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+    }
+
+    .column.col1 .menu li a:hover {
+        box-shadow: none;
+        background: rgba(36, 130, 174, 0.3);
+    }
+
+    .column.col1 .menu li i {
+        display: none;
+    }
+
+    .column.col2 {
+        background: #fff;
+    }
+
+    .column.col4 {
+        border-top: 1px solid #dbdbdb;
+    }
+}
+
+/* 화면 너비 0~480px */
+@media (max-width: 480px) {}
+
+/* 화면 너비 0~320px */
+@media (max-width: 320px) {
+    .nav>div li {
+        width: 100%;
+    }
+
+    .nav>div:last-child li {
+        width: 100%;
     }
 }
