--- a/Web/Responsive/css/style.css
+++ b/Web/Responsive/css/style.css
@@ -683,6 +683,97 @@
             text-align: center;
         }
 
+        /* 비디오 */
+        .video {
+            position: relative;
+            width: 100%;
+            padding-bottom: 56.25%;
+        }
+
+        .video iframe {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* footer */
+        .footer {
+            text-align: center;
+            padding: 30px 50px;
+        }
+
+        .footer li {
+            position: relative;
+            display: inline;
+            padding: 0 7px 0 10px;
+            white-space: nowrap;
+        }
+
+        .footer li:before {
+            content: '';
+            width: 1px;
+            height: 12px;
+            background-color: #dbdbdb;
+            position: absolute;
+            left: 0;
+            top: 2px;
+        }
+
+        .footer li:first-child:before {
+            width: 0;
+        }
+
+        .footer address {
+            padding-top: 15px;
+        }
+
+        /* 사이드 이펙트1 */
+        .side1 {
+            position: relative;
+            perspective: 600px;
+            display: block;
+        }
+
+        .side1 .front {
+            transform-style: preserve-3d;
+            transform: rotateY(0deg);
+            transition: all 0.5s ease-in-out;
+            backface-visibility: hidden;
+        }
+
+        .side1 .back {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            transform-style: preserve-3d;
+            color: #fff;
+            background: #4038dc;
+            transform: rotateY(-180deg);
+            transition: all 0.5s ease-in-out;
+            backface-visibility: hidden;
+        }
+
+        .side1 i {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 60px;
+
+        }
+
+        .side1:hover .front {
+            transform: rotateY(180deg);
+        }
+
+        .side1:hover .back {
+            transform: rotateY(0deg);
+            z-index: 1;
+        }
+
 
         /* mediaquery */
         /* 화면 너비 0~1220px */
@@ -737,7 +828,7 @@
 
             #cont_center {
                 margin-right: 0;
-                border-right: 0;
+
             }
 
             .nav>div {
@@ -759,6 +850,26 @@
 
             .nav>div ol {
                 margin-bottom: 10px;
+            }
+
+            #cont_right {
+                overflow: hidden;
+            }
+
+            #cont_right .column {
+                float: left;
+                width: 33.3333%;
+                box-sizing: border-box;
+            }
+
+            #cont_right .column.col7 {
+                border-right: 1px solid #dbdbdb;
+                border-bottom: 0;
+            }
+
+            #cont_right .column.col8 {
+                border-right: 1px solid #dbdbdb;
+                border-bottom: 0;
             }
         }
 
@@ -849,6 +960,18 @@
 
             .column.col4 {
                 border-top: 1px solid #dbdbdb;
+            }
+
+            #cont_right .column {
+                width: 50%;
+            }
+
+            #cont_right .column.col8 {
+                border-right: 0;
+            }
+
+            #cont_right .column.col9 {
+                display: none;
             }
 
             .slider figcaption {
